@@ -1,4 +1,4 @@
-.TH scontrol "1" "Slurm Commands" "August 2019" "Slurm Commands"
+.TH scontrol "1" "Slurm Commands" "September 2019" "Slurm Commands"
 
 .SH "NAME"
 scontrol \- view or modify Slurm configuration and state.
@@ -1817,8 +1817,7 @@ reservation.
 .TP
 \fIPART_NODES\fR
 This flag can be used to reserve all nodes within the specified
-partition.  PartitionName and Nodes=ALL must be specified or
-this option is ignored.
+partition.  PartitionName and Nodes=ALL must be specified with this flag.
 .TP
 \fIPURGE_COMP\fR
 Purge the reservation once the last associated job has completed.
